fix spacing on desktop view top movie

--- a/src/components/TopPickMovie/TopPickMovie.scss
+++ b/src/components/TopPickMovie/TopPickMovie.scss
@@ -17,7 +17,8 @@
   @include tablet {
     flex-direction: row;
     align-items: center;
-    gap: $spacing-unit-sm;
+    justify-content: flex-start;
+    gap: $spacing-unit-xl;
   }
 
   &__img {
